[과제] build: exif 의존성 추가

--- a/CustomGallery/gradle/libs.versions.toml
+++ b/CustomGallery/gradle/libs.versions.toml
@@ -20,6 +20,7 @@ hiltNavigationCompose = "1.3.0"
 ksp = "2.2.21-2.0.4" # Kotlin 버전(2.2.21)과 호환되는 ksp 버전
 room = "2.8.4"
 paging = "3.3.6"
+exifinterface = "1.3.7"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -70,6 +71,7 @@ androidx-room-testing = { module = "androidx.room:room-testing", version.ref = "
 androidx-paging-runtime = { group = "androidx.paging", name = "paging-runtime", version.ref = "paging" }
 androidx-paging-compose = { group = "androidx.paging", name = "paging-compose", version.ref = "paging" }
 androidx-paging-common = { group = "androidx.paging", name = "paging-common", version.ref = "paging" }
+androidx-exifinterface = { group = "androidx.exifinterface", name = "exifinterface", version.ref = "exifinterface" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
