[과제] feat: 연습문제 3 DataSource 역할 분리

--- a/CustomGallery/app/src/main/AndroidManifest.xml
+++ b/CustomGallery/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
         </activity>
 
         <provider
-            android:name="androidx.core.content.FileProvider"
+            android:name=".core.provider.GalleryFileProvider"
             android:authorities="${applicationId}.provider"
             android:exported="false"
             android:grantUriPermissions="true">
